[gd_scene load_steps=7 format=3 uid="uid://cxe8g3q6hxq41"]

[ext_resource type="Texture2D" uid="uid://c44bibef3iu55" path="res://icons/MaterialSymbolsInfo.png" id="1_2aki3"]
[ext_resource type="Script" path="res://scripts/menu/displayer.gd" id="1_ckokk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fkby"]
bg_color = Color(0.866667, 0.866667, 0.866667, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 5

[sub_resource type="Animation" id="Animation_lx1c6"]
length = 0.001

[sub_resource type="Animation" id="Animation_igd4s"]
resource_name = "resize_info_panel"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(50, 50), Vector2(400, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 128), Vector2(292, -36)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5fexg"]
_data = {
"RESET": SubResource("Animation_lx1c6"),
"resize_info_panel": SubResource("Animation_igd4s")
}

[node name="Displayer" type="Control" node_paths=PackedStringArray("animation", "info_box")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckokk")
animation = NodePath("AnimationPlayer")
info_box = NodePath("InfoPanel/InfoContainer")
metadata/_edit_vertical_guides_ = [901.0]

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8fkby")

[node name="InfoContainer" type="MarginContainer" parent="InfoPanel"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel/InfoContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CheckButton" type="CheckButton" parent="InfoPanel/InfoContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 10
text = "Data Forwarding"

[node name="IPC" type="Label" parent="InfoPanel/InfoContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Stalls" type="Label" parent="InfoPanel/InfoContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(128, 128)
texture = ExtResource("1_2aki3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../InfoPanel")
libraries = {
"": SubResource("AnimationLibrary_5fexg")
}

[connection signal="mouse_entered" from="InfoPanel" to="." method="_on_radio_buttom_mouse_entered"]
[connection signal="mouse_exited" from="InfoPanel" to="." method="_on_radio_buttom_mouse_exited"]
[connection signal="toggled" from="InfoPanel/InfoContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
